--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
+    "axios": "^1.7.9",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.3",
-    "styled-components": "^6.1.15",
-    "axios": "^1.7.9"
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/leaflet": "^1.9.21",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.2",
     "@types/styled-components": "^5.1.34",
